--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "express": "~4.13.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "passport": "^0.4.1"
   },
   "engines": {
