--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
     "mongoose": "^5.9.16",
+    "mongoose-keywords": "^0.4.1",
     "multer": "^1.4.2",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "querymen": "^2.1.4"
   },
   "engines": {
     "node": "10.x"
