--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongoose-keywords": "^0.4.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "querymen": "^2.1.4"
+    "querymen": "^2.1.4",
+    "socket.io": "^2.3.0"
   },
   "engines": {
     "node": "10.x"
