--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^8.2.0",
     "express": "~4.13.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.6",
@@ -18,8 +19,8 @@
     "mongoose-keywords": "^0.4.1",
     "multer": "^1.4.2",
     "passport": "^0.4.1",
-    "querymen": "^2.1.4",
-    "socket.io": "^2.3.0"
+    "pusher": "^5.0.0",
+    "querymen": "^2.1.4"
   },
   "engines": {
     "node": "10.x"
